tests/uat/errors/missing_variable.rq
rq get_user("{{base_url}}/users/{{user_id}}");
